--- a/assets/sass/object/component/_c-button.scss
+++ b/assets/sass/object/component/_c-button.scss
@@ -4,54 +4,54 @@
 c-button
 -----------------------------------------------------*/
 .c-button {
-  transition: all 0.1s ease-out;
-  @include inc.sizingRem(font-size, wide, 13px, sp, 12px);
-  @include inc.sizing(height, wide, 40px, sp, 35px);
-  border: 1px solid #ccc;
-  border-radius: 99px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  font-weight: 400;
-  & > p {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 70%;
-    margin: 0 auto;
-    &::after {
-      content: "";
-      width: 6.1px;
-      height: 6.1px;
-      border-top: 2px solid inc.$main-color;
-      border-right: 2px solid inc.$main-color;
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg);
-    }
-  }
-  &:hover {
-    background-color: inc.$main-color;
-    color: inc.$accent-text-color;
-    border-color: inc.$main-color;
-    & > p {
-      &::after {
-        transition: all 0.3s ease-out;
-        margin-right: -5px;
-        border-color: inc.$accent-text-color;
-      }
-    }
-  }
-  &--nega {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    width: 160px;
-    background-color: inc.$main-color;
-    color: inc.$accent-text-color;
-    border-color: inc.$main-color;
-  }
-  &--back-top {
-    width: 160px;
-  }
+  // transition: all 0.1s ease-out;
+  // @include inc.sizingRem(font-size, wide, 13px, sp, 12px);
+  // @include inc.sizing(height, wide, 40px, sp, 35px);
+  // border: 1px solid #ccc;
+  // border-radius: 99px;
+  // position: relative;
+  // display: flex;
+  // align-items: center;
+  // font-weight: 400;
+  // & > p {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-between;
+  //   width: 70%;
+  //   margin: 0 auto;
+  //   &::after {
+  //     content: "";
+  //     width: 6.1px;
+  //     height: 6.1px;
+  //     border-top: 2px solid inc.$main-color;
+  //     border-right: 2px solid inc.$main-color;
+  //     -webkit-transform: rotate(45deg);
+  //     transform: rotate(45deg);
+  //   }
+  // }
+  // &:hover {
+  //   background-color: inc.$main-color;
+  //   color: inc.$accent-text-color;
+  //   border-color: inc.$main-color;
+  //   & > p {
+  //     &::after {
+  //       transition: all 0.3s ease-out;
+  //       margin-right: -5px;
+  //       border-color: inc.$accent-text-color;
+  //     }
+  //   }
+  // }
+  // &--nega {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   height: 50px;
+  //   width: 160px;
+  //   background-color: inc.$main-color;
+  //   color: inc.$accent-text-color;
+  //   border-color: inc.$main-color;
+  // }
+  // &--back-top {
+  //   width: 160px;
+  // }
 }
