--- a/assets/sass/layout/_l-body.scss
+++ b/assets/sass/layout/_l-body.scss
@@ -1,8 +1,16 @@
 @charset 'UTF-8';
+@use "../inc/" as inc;
 /*
 l-body
 -----------------------------------------------------*/
-.l-body.active {
-  height: 100%;
-  overflow: hidden;
+// .l-body.active {
+//   height: 100%;
+//   overflow: hidden;
+// }
+.l-body {
+  padding-top: 60px;
+  @include inc.mq(vr) {
+    padding-top: 100px;
+  }
 }
+
