--- a/assets/sass/layout/_l-footer.scss
+++ b/assets/sass/layout/_l-footer.scss
@@ -5,5 +5,5 @@ l-footer
 -----------------------------------------------------*/
 .l-footer {
   width: 100%;
-  background-color: inc.$sub-background-color;
+  //background-color: inc.$sub-background-color;
 }
