--- a/assets/sass/object/project/_p-footer.scss
+++ b/assets/sass/object/project/_p-footer.scss
@@ -4,244 +4,526 @@
 p-footer
 -----------------------------------------------------*/
 .p-footer {
-  border-top: 1px solid #cae7e4;
-  background-color: inc.$sub-background-color;
-  &__inner-banner {
-    background-color: inc.$main-background-color;
-    width: 100%;
-  }
+  padding: 0 0 2rem;
   &__banner {
-    width: 85%;
-    margin: 0 auto;
-    padding: 60px 0;
-    display: grid;
-    grid-template-columns: repeat(
-      auto-fit,
-      clamp(156px, 7.88vw + 126.4px, 250px)
-    );
-    justify-content: center;
-    row-gap: 18px;
-    column-gap: 2%;
-    @include inc.mq(sp) {
-      width: 90%;
+    background: inc.$sub-background-color;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    padding: 3rem 0 6rem;
+    position: relative;
+    @include inc.mq(vr) {
+      padding: 12rem 0 9rem;
     }
-    @include inc.mq(tab) {
-      padding: 70px 0;
-    }
-  }
-  &__banner-item {
-    height: 100%;
-    @include inc.sizing(width, wide, 250px, sp, 156px);
-    border: 1px solid #cccccc;
-    & > a {
+    &::after {
+      content: "";
+      width: 100%;
       height: 100%;
-      display: block;
-    }
-    & > a > img {
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  &__inner-list {
-    width: 100%;
-    border-bottom: 1px solid #cae7e4;
-  }
-  &__list {
-    margin: 0 auto;
-    width: 85%;
-    @include inc.sizingRem(font-size, wide, 16px, sp, 14px);
-    display: flex;
-    flex-direction: column;
-    @include inc.mq(sp) {
-      width: 100%;
-    }
-    @include inc.mq(tab) {
-      width: 95%;
-      max-width: 1120px;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 4%;
-      flex-wrap: wrap;
-    }
-    @include inc.mq(lap) {
-      gap: 5%;
-    }
-  }
-
-  &__list-item {
-    @include inc.mq(tab) {
-      padding: 0;
-      border: none;
-    }
-    border-bottom: 1px solid #cae7e4;
-    height: 63px;
-    padding: 0 6.7%;
-    display: flex;
-    align-items: center;
-    & > a {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-    }
-    & > a > span {
-      @include inc.mq(tab) {
-        display: none;
+      position: absolute;
+      z-index: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url(../img/footer/hand.png) no-repeat;
+      background-size: 240px;
+      background-position: -15% 150%;
+      mix-blend-mode: multiply;
+      @include inc.mq(vr) {
+        background-size: 570px 718px;
+        background-position: 90% 10%;
       }
+    }
+    &-inner {
+      position: relative;
+      z-index: 1;
+    }
+    &-text {
+      color: inc.$accent-text-color;
+      @include inc.sizingRem(font-size, wide, 39px, sp, 24px);
+      font-weight: 700;
+      text-align: center;
+      margin: 0 auto 3rem;
+      @include inc.mq(vr) {
+        margin: 0 auto 2.5rem;
+      }
+    }
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: .8rem 0;
+      @include inc.mq(vr) {
+        gap:0;
+      }
+      &-item {
+        width: 100%;
+        height: 60px;
+        border-radius: 30px;
+        list-style-type: none;
+        @include inc.mq(vr) {
+          width: 48%;
+          height: 5rem;
+          border-radius: 2.5rem;
+        }
+        span {
+          color: inc.$sub-text-color2;
+          font-weight: 700;
+          width: 100%;
+          height: 100%;
+          padding: 0 2rem;
+          display:flex;
+          flex-direction:column;
+          justify-content:center;
+          @include inc.sizingRem(font-size, wide, 22px, sp, 16px);
+          @include inc.mq(vr) {
+            padding: 0 3rem;
+          }
+        }
+        &.-white {
+          background: url(../img/arw/blue_right.svg) no-repeat calc(100% - 2rem) 50% inc.$main-background-color;
+          background-size: 15px;
+          @include inc.mq(vr) {
+            background-size: 20px;
+            background-position: calc(100% - 3rem) 50%;
+          }
+        }
+        &.-yellow {
+          background: url(../img/icon/blue_blank.svg) no-repeat calc(100% - 2rem) 53% inc.$accent-background-color;
+          @include inc.mq(vr) {
+            background-size: 20px;
+            background-position: calc(100% - 3rem) 50%;
+          }
+        }
+      }
+      &-faq {
+        margin: 2.5rem auto 0;
+        text-align: center;
+        @include inc.mq(vr) {
+          margin: 4rem auto 0;
+        }
+        a {
+          span {
+            color:inc.$accent-text-color;
+            @include inc.sizingRem(font-size, wide, 18px, sp, 14px);
+            padding: 0 1.6rem 4px 0;
+            position: relative;
+            border-bottom: 1px solid inc.$border-color2;
+            @include inc.mq(vr) {
+              padding: 0 2rem 5px 0;
+            }
+            &::after {
+              content: "";
+              width: 15px;
+              height: 15px;
+              background: url(../img/arw/white_right.svg) no-repeat 0 0;
+              background-size: 15px;
+              position: absolute;
+              right: 0;
+              top: 3px;
+              @include inc.mq(vr) {
+                width: 20px;
+                height: 20px;
+                background-size: 20px;
+                top: 5px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  &__inner-sitemap {
+    display: block;
+    justify-content: space-between;
+    padding: 2rem 0 3.5rem;
+    @include inc.mq(vr) {
+      display: flex;
+      padding: 4rem 0 6rem;
     }
   }
   &__inner-logo {
     width: 100%;
   }
   &__logo {
-    width: 85%;
-    margin: 36px 6.7%;
-    @include inc.mq(sp) {
-      @include inc.sizing(width, wide, 832px, sp, 305px);
-    }
-    @include inc.mq(tab) {
-      width: 90%;
-      max-width: 1120px;
-      margin: 45px auto 60px;
-    }
+    position: relative;
+    @include inc.sizing(width, wide, 345px, tab, 345px);
     & > img {
-      @include inc.mq(tab) {
-        height: 42px;
+      @include inc.mq(vr) {
+        height: 53px;
       }
-      height: 27px;
+      height: 31px;
       width: auto;
     }
-  }
-  &__inner-office {
-    width: 100%;
-  }
-  &__office {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    flex-wrap: wrap;
-    row-gap: 19px;
-    margin: 25px 0;
-    padding: 0 13.3% 0 6.7%;
-    margin: 0 auto 70px;
-    width: 100%;
-    @include inc.mq(sp) {
-      flex-direction: row;
-    }
-    @include inc.mq(tab) {
-      width: 90%;
-      max-width: 1120px;
-      margin: 45px auto 104px;
-      padding: 0;
-      gap: 40px 2.8%;
-    }
-  }
-  &__office::after {
-    @include inc.mq(tab) {
-      content: "";
-      display: block;
-      width: 29%;
-    }
-  }
-  &__office-item {
-    @include inc.mq(sp) {
-      width: 100%;
-    }
-    @include inc.mq(spl) {
-      width: 47%;
-    }
-    @include inc.mq(lap) {
-      letter-spacing: -0.02em;
-      width: 22.9%;
-    }
-    @include inc.mq(vr) {
-      letter-spacing: 0;
-    }
-    width: 100%;
-    @include inc.mq(spl) {
-      flex-direction: column;
-      gap: 15px;
-    }
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    & > p {
-      width: 20%;
-      line-height: 24px;
-      @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
+    &::after {
+      content: "採用サイト";
+      @include inc.sizingRem(font-size, wide, 18px, sp, 10px);
+      color: inc.$main-text-color;
       font-weight: 700;
-      @include inc.mq(spl) {
-        width: 100%;
-      }
-    }
-    & > span {
-      width: 70%;
-      @include inc.sizingRem(font-size, wide, 13px, sp, 12px);
-      font-weight: 400;
-      line-height: 20px;
-      @include inc.mq(spl) {
-        width: 100%;
+      position: absolute;
+      left: 13.5rem;
+      bottom: 0px;
+      @include inc.mq(vr) {
+        left: auto;
+        right: -6.4rem;
+        bottom: -2px;
       }
     }
   }
-  &__inner-link {
+  &__inner-list {
     width: 100%;
-    border-top: 1px solid #cae7e4;
-  }
-  &__link {
-    margin: 0 auto;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    row-gap: 1em;
-    height: 155px;
-    padding: 40px 6.7%;
-    @include inc.mq(tab) {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 1.7em;
-      height: 75px;
-      padding: 0 6.7%;
-      width: 90%;
-      max-width: 1120px;
+    justify-content: space-between;
+    @include inc.mq(vr) {
+      display: flex;
+      width: 60%;
+      margin-right: 6rem;
     }
   }
-  &__link-item {
-    @include inc.mq(tab) {
+  &__list {
+    width: 100%;
+    @include inc.mq(vr) {
       width: auto;
     }
-    width: 50%;
-    @include inc.sizingRem(font-size, wide, 12px, sp, 10px);
-    font-weight: 400;
+  }
+  &__list-item {
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem 0;
+    @include inc.mq(vr) {
+      display: block;
+    }
+    dt {
+      width: 100%;
+      margin: 1.5rem 0 0.2rem;
+      @include inc.sizingRem(font-size, wide, 20px, sp, 15px);
+      font-weight: 700;
+      @include inc.mq(vr) {
+        width: auto;
+        margin: 0;
+      }
+    }
+    dd{
+      width: 48%;
+      @include inc.mq(vr) {
+        width: auto;
+      }
+      @include inc.sizingRem(font-size, wide, 14px, sp, 12px);
+      a {
+        color: inc.$accent-text-color2;
+      }
+      &.-sp {
+        width: auto;
+      }
+    }
+    dt + dd {
+      margin-top: 0;
+      @include inc.mq(vr) {
+        margin-top: 1rem;
+      }
+    }
+    dd + dd {
+      @include inc.mq(vr) {
+        margin-top: .3rem;
+      }
+    }
+  }
+  &__list-item + &__list-item {
+    @include inc.mq(vr) {
+      margin-top: 2.2rem;
+    }
   }
   &__inner-bottom {
     width: 100%;
-    background-color: inc.$main-color;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between
   }
   &__bottom {
-    padding: 18px 25px 18px 0;
-    margin-left: 7%;
-    width: 85%;
-    font-family: "Montserrat", sans-serif;
-    color: inc.$accent-text-color;
-    @include inc.sizingRem(font-size, wide, 15px, sp, 10px);
-    @include inc.sizing(line-height, wide, 40px, sp, 12px);
-    @include inc.mq(sp) {
-      @include inc.sizing(width, wide, 832px, sp, 348px);
-    }
-    @include inc.mq(tab) {
-      text-align: center;
-      padding: 18px 25px;
-      margin: 0 auto;
-      width: calc(44.17vw + 139.4px);
-      max-width: 1120px;
+    order: 2;
+    line-height: 1;
+    @include inc.mq(vr) {
+      order: 1;
     }
     & > small {
-      transform: scale(0.9);
+      font-family: "Montserrat", sans-serif;
+      @include inc.sizingRem(font-size, wide, 12px, sp, 8px);
+    }
+  }
+  &__corporate {
+    @include inc.sizingRem(font-size, wide, 16px, sp, 12px);
+    display: flex;
+    justify-content: end;
+    gap: 0 1.5rem;
+    order: 1;
+    margin: 0 0 1rem!important;
+    @include inc.mq(vr) {
+      gap: 0 2rem;
+      order: 2;
+      margin-bottom: 0!important;
+      margin-right: 6rem!important;
+    }
+    li {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
     }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .p-footer {
+//   border-top: 1px solid #cae7e4;
+//   background-color: inc.$sub-background-color;
+//   &__inner-banner {
+//     background-color: inc.$main-background-color;
+//     width: 100%;
+//   }
+//   &__banner {
+//     width: 85%;
+//     margin: 0 auto;
+//     padding: 60px 0;
+//     display: grid;
+//     grid-template-columns: repeat(
+//       auto-fit,
+//       clamp(156px, 7.88vw + 126.4px, 250px)
+//     );
+//     justify-content: center;
+//     row-gap: 18px;
+//     column-gap: 2%;
+//     @include inc.mq(sp) {
+//       width: 90%;
+//     }
+//     @include inc.mq(tab) {
+//       padding: 70px 0;
+//     }
+//   }
+//   &__banner-item {
+//     height: 100%;
+//     @include inc.sizing(width, wide, 250px, sp, 156px);
+//     border: 1px solid #cccccc;
+//     & > a {
+//       height: 100%;
+//       display: block;
+//     }
+//     & > a > img {
+//       width: 100%;
+//       height: auto;
+//     }
+//   }
+
+//   &__inner-list {
+//     width: 100%;
+//     border-bottom: 1px solid #cae7e4;
+//   }
+//   &__list {
+//     margin: 0 auto;
+//     width: 85%;
+//     @include inc.sizingRem(font-size, wide, 16px, sp, 14px);
+//     display: flex;
+//     flex-direction: column;
+//     @include inc.mq(sp) {
+//       width: 100%;
+//     }
+//     @include inc.mq(tab) {
+//       width: 95%;
+//       max-width: 1120px;
+//       flex-direction: row;
+//       justify-content: center;
+//       align-items: center;
+//       gap: 4%;
+//       flex-wrap: wrap;
+//     }
+//     @include inc.mq(lap) {
+//       gap: 5%;
+//     }
+//   }
+
+//   &__list-item {
+//     @include inc.mq(tab) {
+//       padding: 0;
+//       border: none;
+//     }
+//     border-bottom: 1px solid #cae7e4;
+//     height: 63px;
+//     padding: 0 6.7%;
+//     display: flex;
+//     align-items: center;
+//     & > a {
+//       display: flex;
+//       align-items: center;
+//       justify-content: space-between;
+//       width: 100%;
+//     }
+//     & > a > span {
+//       @include inc.mq(tab) {
+//         display: none;
+//       }
+//     }
+//   }
+//   &__inner-logo {
+//     width: 100%;
+//   }
+//   &__logo {
+//     width: 85%;
+//     margin: 36px 6.7%;
+//     @include inc.mq(sp) {
+//       @include inc.sizing(width, wide, 832px, sp, 305px);
+//     }
+//     @include inc.mq(tab) {
+//       width: 90%;
+//       max-width: 1120px;
+//       margin: 45px auto 60px;
+//     }
+//     & > img {
+//       @include inc.mq(tab) {
+//         height: 42px;
+//       }
+//       height: 27px;
+//       width: auto;
+//     }
+//   }
+//   &__inner-office {
+//     width: 100%;
+//   }
+//   &__office {
+//     display: flex;
+//     justify-content: space-between;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     row-gap: 19px;
+//     margin: 25px 0;
+//     padding: 0 13.3% 0 6.7%;
+//     margin: 0 auto 70px;
+//     width: 100%;
+//     @include inc.mq(sp) {
+//       flex-direction: row;
+//     }
+//     @include inc.mq(tab) {
+//       width: 90%;
+//       max-width: 1120px;
+//       margin: 45px auto 104px;
+//       padding: 0;
+//       gap: 40px 2.8%;
+//     }
+//   }
+//   &__office::after {
+//     @include inc.mq(tab) {
+//       content: "";
+//       display: block;
+//       width: 29%;
+//     }
+//   }
+//   &__office-item {
+//     @include inc.mq(sp) {
+//       width: 100%;
+//     }
+//     @include inc.mq(spl) {
+//       width: 47%;
+//     }
+//     @include inc.mq(lap) {
+//       letter-spacing: -0.02em;
+//       width: 22.9%;
+//     }
+//     @include inc.mq(vr) {
+//       letter-spacing: 0;
+//     }
+//     width: 100%;
+//     @include inc.mq(spl) {
+//       flex-direction: column;
+//       gap: 15px;
+//     }
+//     width: 100%;
+//     display: flex;
+//     justify-content: space-between;
+//     & > p {
+//       width: 20%;
+//       line-height: 24px;
+//       @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
+//       font-weight: 700;
+//       @include inc.mq(spl) {
+//         width: 100%;
+//       }
+//     }
+//     & > span {
+//       width: 70%;
+//       @include inc.sizingRem(font-size, wide, 13px, sp, 12px);
+//       font-weight: 400;
+//       line-height: 20px;
+//       @include inc.mq(spl) {
+//         width: 100%;
+//       }
+//     }
+//   }
+//   &__inner-link {
+//     width: 100%;
+//     border-top: 1px solid #cae7e4;
+//   }
+//   &__link {
+//     margin: 0 auto;
+//     width: 100%;
+//     display: flex;
+//     flex-wrap: wrap;
+//     flex-direction: column;
+//     row-gap: 1em;
+//     height: 155px;
+//     padding: 40px 6.7%;
+//     @include inc.mq(tab) {
+//       flex-direction: row;
+//       justify-content: center;
+//       align-items: center;
+//       gap: 1.7em;
+//       height: 75px;
+//       padding: 0 6.7%;
+//       width: 90%;
+//       max-width: 1120px;
+//     }
+//   }
+//   &__link-item {
+//     @include inc.mq(tab) {
+//       width: auto;
+//     }
+//     width: 50%;
+//     @include inc.sizingRem(font-size, wide, 12px, sp, 10px);
+//     font-weight: 400;
+//   }
+//   &__inner-bottom {
+//     width: 100%;
+//     background-color: inc.$main-color;
+//   }
+//   &__bottom {
+//     padding: 18px 25px 18px 0;
+//     margin-left: 7%;
+//     width: 85%;
+//     font-family: "Montserrat", sans-serif;
+//     color: inc.$accent-text-color;
+//     @include inc.sizingRem(font-size, wide, 15px, sp, 10px);
+//     @include inc.sizing(line-height, wide, 40px, sp, 12px);
+//     @include inc.mq(sp) {
+//       @include inc.sizing(width, wide, 832px, sp, 348px);
+//     }
+//     @include inc.mq(tab) {
+//       text-align: center;
+//       padding: 18px 25px;
+//       margin: 0 auto;
+//       width: calc(44.17vw + 139.4px);
+//       max-width: 1120px;
+//     }
+//     & > small {
+//       transform: scale(0.9);
+//     }
+//   }
+// }
