--- a/assets/sass/object/component/_c-br.scss
+++ b/assets/sass/object/component/_c-br.scss
@@ -3,42 +3,42 @@
 /*
 c-br
 -----------------------------------------------------*/
-// .c-br {
-//   &--tab {
-//     display: block;
-//     @include inc.mq(tab) {
-//       display: none;
-//     }
-//   }
-//   &--tab-r {
-//     display: none;
-//     @include inc.mq(tab) {
-//       display: block;
-//     }
-//   }
-//   &--lap {
-//     display: block;
-//     @include inc.mq(lap) {
-//       display: none;
-//     }
-//   }
-//   &--lap-r {
-//     display: none;
-//     @include inc.mq(lap) {
-//       display: block;
-//     }
-//   }
-//   &--640 {
-//     display: none;
-//   }
-// }
-// @media screen and (min-width: 540px) {
-//   .c-br--640 {
-//     display: block;
-//   }
-// }
-// @media screen and (min-width: 640px) {
-//   .c-br--640 {
-//     display: none;
-//   }
-// }
+.c-br {
+  &--tab {
+    display: block;
+    @include inc.mq(tab) {
+      display: none;
+    }
+  }
+  &--tab-r {
+    display: none;
+    @include inc.mq(tab) {
+      display: block;
+    }
+  }
+  &--lap {
+    display: block;
+    @include inc.mq(lap) {
+      display: none;
+    }
+  }
+  &--lap-r {
+    display: none;
+    @include inc.mq(lap) {
+      display: block;
+    }
+  }
+  &--640 {
+    display: none;
+  }
+}
+@media screen and (min-width: 540px) {
+  .c-br--640 {
+    display: block;
+  }
+}
+@media screen and (min-width: 640px) {
+  .c-br--640 {
+    display: none;
+  }
+}
